This commit contains the following changes:
* Further improve implementation of Angular2 technologies
* Migrate backend implementation from using Google AppEngine to AWS,
  using S3 to store name data files.
* Authenticate via Google OAuth2 so the user still signs in with a
  Google account. The only authorization the app requires is the
  ability to store a small amount of application data in the user's
  appData folder
* Adding copyright and javadoc information to many files.

TODO:
* Update city generator page
* Consider using a Trie to hold the generated name information, as
  that might give better results.
* Also consider saving the post-processed name and city data as
  Gson objects so the application doesn't have to parse the files
  every time it starts. It could even save the files locally and
  check for them first, only building them (and thus making an S3
  request) if it doesn't find it.